deploy/staging/skosmos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skosmos
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '32k'
spec:
  ingressClassName: nginx
  rules:
    - host: skosmos.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: skosmos
                port:
                  number: 80
            path: /
            pathType: Prefix
